# droughtNN

./: .gitignore  CITATION.cff  ECMWF_ELM_comparison.py  ELMplot.py  LICENSE  LOO_model_selection.py  LOO_model_selection_combo.py  README.md  bestELM.py  download.txt  functions.py  functions_combo.py  modelCreation.py  model_comparison.xlsx  pyproject.toml  pytorchGPU.py  test_table.py  testing.py
00_monthly_ELMs/: ECMWF_ELM_comparison.py  LOO_model_selection_combo.py  README.md  bestELM.py  functions_combo.py
01_full_monthly_NN/: FullNN.py  LOO_model_selection.py  LOO_model_selection_combo.py  best_NNs.py  function_full.py  generate_dataset.py  generate_datasets.py  keras-tuner_model_selection.py
02_full_daily_NN/: LOO_model_selection.py  best_NNs.py  function_full.py  generate_dataset.py  keras-tuner_model_selection.py
daily_nn/: 00_precompute_global_data.py  01_generate_datasets.py  02_tune_hyperparameters.py  03_generate_best_models_summary.py  04_extract_best_predictions.py  05_final_test.py  06_trend_comparison.py  README.md  linear_baseline.py
features_permutation_scores/: NN_neu-4_bs-1_lr-0.01_act-relu_ep-20_scores.csv  NN_neu-4_bs-1_lr-0.01_act-relu_ep-30_scores.csv  NN_neu-4_bs-1_lr-0.01_act-relu_ep-35_scores.csv  NN_scores.csv  skELM_neu-10_act-sigm_scores.csv  skELM_neu-10_scores.csv  skELM_neu-11_scores.csv  skELM_neu-12_scores.csv  skELM_neu-2_scores.csv  skELM_neu-3_scores.csv  skELM_neu-4_scores.csv  skELM_neu-5_scores.csv  skELM_neu-6_scores.csv  skELM_neu-7_scores.csv  skELM_neu-8_scores.csv  skELM_neu-9_scores.csv
monthly_elm/: README.md  (+4 more)
(+27626 files in other folders)
